--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.22-SNAPSHOT"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.12"
     }
 }
 
