--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.12"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.4.0.0"
     }
 }
 
@@ -100,13 +100,20 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+
+    testOptions {
+        junitPlatform {
+            // Configure JUnit 5 tests here
+        }
+        unitTests.all {
+            testLogging {
+                events "skipped", "passed", "failed"
+            }
+        }
+    }
 }
 
-junitPlatform {
-    details "tree"
-    jupiterVersion "5.0.2"
-    vintageVersion "4.12.2"
-}
+
 
 
 androidExtensions {
@@ -166,10 +173,6 @@ dependencies {
     testImplementation "org.jetbrains.spek:spek-api:$spek_version"
     testImplementation "org.jetbrains.spek:spek-junit-platform-engine:$spek_version"
     testImplementation "org.jetbrains.spek:spek-subject-extension:$spek_version"
-
-    testImplementation junit5()
-    testImplementation junit5Params()
-    testCompileOnly junit5EmbeddedRuntime()
 
     testImplementation "org.junit.platform:junit-platform-runner:1.0.2"
 
